# MCP

./: AGENT.md  CLAUDE.md  LICENSE  NOTICE  README.md  folder.trug.json  pyproject.toml
servers/browser/: browser.py  dom_parser.py  screenshot.py  server.py
servers/email/: server.py
servers/gimp/: server.py  visual.py
servers/inkscape/: server.py
servers/libreoffice/: server.py
servers/tesseract/: server.py
shared/: __init__.py  env.py
skills/email-classify/: SKILL.md
skills/email-draft/: SKILL.md
skills/email-fetch/: SKILL.md
skills/email-read/: SKILL.md
skills/email-respond/: SKILL.md
skills/email-search/: SKILL.md
skills/email-triage/: SKILL.md
tests/: test_imports.py
