[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xepayac-mcp"
version = "0.1.0"
description = "MCP servers for Claude Code — browser, email, GIMP, Inkscape, LibreOffice, Tesseract"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xepayac LLC", email = "xepayacllc@gmail.com"}
]
keywords = ["mcp", "claude", "browser", "ocr", "inkscape", "gimp", "libreoffice", "email"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
gimp = ["Pillow>=10.0.0"]
all = ["playwright>=1.40.0", "Pillow>=10.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=1.0.0"]

[project.urls]
Repository = "https://github.com/Xepayac/MCP"

[tool.setuptools.packages.find]
include = ["servers*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
